WA for tornadofx issue: https://github.com/edvin/tornadofx/issues/1270